--- a/account_settings.ui
+++ b/account_settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>412</width>
-    <height>332</height>
+    <width>471</width>
+    <height>431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,13 +15,13 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(76, 76, 76);
-	font: 12pt "Courier";</string>
+	font: 12pt &quot;Courier&quot;;</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>50</x>
+     <y>84</y>
      <width>391</width>
      <height>221</height>
     </rect>
@@ -30,7 +30,8 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="styleSheet">
-       <string notr="true">color: rgb(248, 253, 253);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
       </property>
       <property name="text">
        <string>Username:</string>
@@ -40,7 +41,8 @@
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
       </property>
       <property name="text">
        <string>New Username:</string>
@@ -50,7 +52,9 @@
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
-       <string notr="true">color: rgb(250, 253, 253);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;
+</string>
       </property>
       <property name="text">
        <string>Email:</string>
@@ -60,7 +64,8 @@
     <item row="4" column="0">
      <widget class="QLabel" name="label_4">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
       </property>
       <property name="text">
        <string>Old Password:</string>
@@ -70,7 +75,8 @@
     <item row="5" column="0">
      <widget class="QLabel" name="label_4">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
       </property>
       <property name="text">
        <string>New Password:</string>
@@ -80,7 +86,8 @@
     <item row="3" column="0">
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);</string>
+       <string notr="true">color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;</string>
       </property>
       <property name="text">
        <string>Phone Number:</string>
@@ -137,14 +144,15 @@
   <widget class="QPushButton" name="save_changes">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>250</y>
+     <x>320</x>
+     <y>324</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(86, 231, 115);
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;
 color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
@@ -154,14 +162,15 @@ color: rgb(0, 0, 0);</string>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>290</y>
-     <width>391</width>
+     <x>320</x>
+     <y>364</y>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 0, 128);
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;
 color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
@@ -171,16 +180,16 @@ color: rgb(0, 0, 0);</string>
   <widget class="QPushButton" name="leave_of_absence">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>250</y>
+     <x>30</x>
+     <y>324</y>
      <width>131</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(61, 229, 229);
-color: rgb(0, 0, 0);
-</string>
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;
+color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string>Group Absence</string>
@@ -189,14 +198,15 @@ color: rgb(0, 0, 0);
   <widget class="QPushButton" name="present">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>250</y>
+     <x>180</x>
+     <y>324</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(227, 201, 69);
+    <string notr="true">background-color: rgb(255, 255, 255);
+font: 13pt &quot;Courier&quot;;
 color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
@@ -206,14 +216,31 @@ color: rgb(0, 0, 0);</string>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>226</y>
+     <x>50</x>
+     <y>300</y>
      <width>391</width>
      <height>16</height>
     </rect>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>20</y>
+     <width>211</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+font: 20pt &quot;Times New Roman&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Account Settings</string>
    </property>
   </widget>
  </widget>
